--- a/src/preprocessing/helloFX/hellofx.fxml
+++ b/src/preprocessing/helloFX/hellofx.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="preprocessing.helloFX.Controller">
+<StackPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+           prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
+           fx:controller="preprocessing.helloFX.Controller">
     <children>
-        <Label fx:id="label" text="Label" />
+        <Label fx:id="label" text="Label"/>
     </children>
 </StackPane>
